--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <disk-restapi-sdk.version>1.03</disk-restapi-sdk.version>
         <rest-assured.version>5.5.0</rest-assured.version>
         <owner.version>1.0.12</owner.version>
+        <slf4j-api.version>2.0.16</slf4j-api.version>
+        <slf4j-simple.version>2.0.16</slf4j-simple.version>
+        <mockito-core.version>5.14.2</mockito-core.version>
     </properties>
     <dependencies>
         <dependency>
@@ -49,7 +52,23 @@
         <dependency>
             <groupId>org.aeonbits.owner</groupId>
             <artifactId>owner</artifactId>
-            <version>${owner.version}</version> <!-- Укажите последнюю версию -->
+            <version>${owner.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j-simple.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
